fix mission form datetimepicker position on mobile

--- a/app/assets/stylesheets/missions.scss
+++ b/app/assets/stylesheets/missions.scss
@@ -16,4 +16,6 @@
   width: initial;
   opacity: inherit;
   visibility: inherit;
+  transform: translateX(-13%);
 }
+
